<resources>
    <string name="app_name">Cari Film Basis</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_detail_movie">Detail Catoluge Movie</string>

    <string name="message_error_load">Result not Found !\nPlease check your connection!</string>
    <string name="message_error_empty_field">Field cannot be empty</string>
    <string name="message_error_snackbar">Replace with your own action</string>
    <string name="overview">Following the events of Age of Ultron, the collective governments of the world pass an
        act designed to regulate all superhuman activity. This polarizes opinion amongst the Avengers,
        causing two factions to side with Iron Man or Captain America, which causes an epic battle between former allies.</string>

    <!--NavigationDrawer Title-->
    <string name="nav_title_search_movie">Search</string>
    <string name="nav_title_home">Home</string>
    <string name="nav_title_favorite">Favorites</string>
    <string name="nav_title_now_playing">Now Playing</string>
    <string name="nav_title_up_coming">Upcoming</string>
    <string name="nav_title_settings">Settings</string>
    <string name="nav_title_communicate">Communicate</string>
    <string name="nav_title_share">Share</string>
    <string name="nav_title_send">Send</string>
    <string name="detail_title_image">Title Image</string>
    <string name="edt_hint_search_movie">Search Movie Here&#8230;</string>

    <string name="btn_detail">Detail</string>
    <string name="btn_share">Share</string>
    <string name="btn_search">Search</string>

    <string name="tv_overview">Overview</string>
    <string name="tv_release_date">Release date</string>

    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Search</item>
        <item>Favorite</item>
    </string-array>

    <string name="title_activity_setting">Settings</string>
    <string name="tv_setting_notification">Notification</string>
    <string name="tv_setting_daily_reminder_notification">Daily Reminder</string>
    <string name="tv_setting_turn_on_off_daily_reminder">Turn on/off daily reminder</string>
    <string name="tv_setting_upcoming_reminder_notification">Upcoming Reminder</string>
    <string name="tv_setting_turn_on_off_upcoming_reminder">Turn on/off upcoming reminder</string>
    <string name="tv_setting_settings">Settings</string>
    <string name="tv_setting_locale">Setting Locale</string>
    <string name="tv_setting_change_your_phone_localization">Change Your Phone Localization</string>
    <string name="message_setup_upcoming">Upcoming Task Set Up</string>
    <string name="message_cancel_upcoming">Upcoming Task Cancel</string>
    <string name="message_setup_daily">DailyReminder Set Up</string>
    <string name="message_cancel_daily">Repeating Alarm Cancel</string>
    <string name="message_notif_daily">Cari Film is missing you SO MUCH&#8230;</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="img_desc_backdrop">Image backdrop</string>
    <string name="message_success_snackbar">Success Save favorite</string>
    <string name="message_delete_snackbar">Favorite deleted</string>
    <string name="appwidget_text">FAVORITE MOVIE</string>
    <string name="add_widget">Add Widget</string>
    <string name="empty_text">DATA EMPTY Please Select Your Favorite Movie</string>
</resources>
