<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_title_home" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_menu_search"
            android:title="@string/nav_title_search_movie" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_local_movies_black_24dp"
            android:title="@string/nav_title_favorite" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_title_settings" />
    </group>

</menu>
